--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,76 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+playagain = True
+while (playagain == True):
+    print("Choose what you want to do.")
+    print("[1] Natural Numbers.")
+    print("[2] Even Numbers.")
+    print("[3] Odd Numbers.")
+    print("[4] Fibonacci Numbers.")
+    print("[5] Prime Numbers.")
+    print("[6] Composite Numbers.")
+    print("[7] Exit.")
+    number = (raw_input("Input the number that you want. "))
+    if (number == "7" or number == "Seven" or number == "seven"):
+        print "Have a nice day"
+        playagain = False
+    elif number == "1" or number == "2" or number == "3" or number == "4" or number == "5" or number == "One" or number == "Two" or number == "Three" or number == "Four" or number == "Five" or number == "one" or number == "two" or number == "three" or number == "four" or number == "five" or number == "6" or number == "Six" or number == "six":
+        final = (int)(raw_input("What number do you want to go up to? "))
+        if (number == "1" or number == "One" or number == "one"):
+            for x in range (1, final + 1, 1):
+                print x
+        elif(number == "2" or number == "Two" or number == "two"):
+            for x in range (1, final + 1, 1):
+                if x % 2 == 0:
+                    print x
+        elif(number == "3" or number == "Three" or number == "three"):
+            for x in range (1, final + 1, 1):
+                if x % 2 == 1:
+                    print x
+        elif(number == "4" or number == "Four" or number == "four"):
+            num1 = 1
+            num2 = 1
+            num3 = 2
+            print num1
+            print num2
+            print num3
+            while num3 <= final:
+                num1 = num2
+                num2 = num3
+                num3 = num1 + num2
+                if num3 <= final:
+                    print num3
+        elif (number == "5" or number == "Five" or number == "five"):
+            for x in range (2, final + 1):
+                isPrime = True
+                sqrt = (int)(x ** 0.5)
+                for number1 in range(2, x):
+                    if x % number1 == 0:
+                        isPrime = False
+                if isPrime == True:
+                    print x
+        elif (number == "6" or number == "Six" or number == "six"):
+            for x in range (2, final + 1):
+                isPrime = True
+                sqrt = (int)(x ** 0.5)
+                for number1 in range(2, x):
+                    if x % number1 == 0:
+                        isPrime = False
+                if isPrime == False:
+                    print x
+        tryagain = raw_input("Do you want to play again?")
+        if tryagain == "y" or tryagain == "Y" or tryagain == "yes" or tryagain == "Yes":
+            print "OK, here you go."
+        else:
+            print "Have a nice day."
+            playagain = False
+    else:
+        print "Sorry, you typed an input that wasn't accounted for. Try again."
+        tryagain = raw_input("Do you want to play again? ")
+        if tryagain == "y" or tryagain == "Y" or tryagain == "yes" or tryagain == "Yes":
+            print "OK, here you go."
+        else:
+            print "Have a nice day."
+            playagain = False
